# onset

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  docker-stack.yml  nginx.conf
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/accounts/: api.py  models.py  schemas.py  tasks.py
backend/accounts/migrations/: 0001_initial.py  0002_user_groups_user_is_superuser_user_user_permissions.py
backend/core/: api.py  errors.py  settings.py  urls.py
backend/onboarding/: admin.py  api.py  google_services.py  knowledge_api.py  models.py  pipedrive_services.py  schemas.py  tasks.py
backend/onboarding/agents/: assistant.py  contexts_functions.py  prompts.py  schemas.py  workflow.py
backend/onboarding/management/commands/: build_knowledge.py  index_knowledge.py
backend/onboarding/migrations/: 0001_initial.py  0002_generatedmaterial.py  0003_alter_onboardingform_tipo_venda.py  0004_alter_onboardingform_apresenta_preco_and_more.py  0005_alter_onboardingform_modelo_venda_and_more.py  0006_migrate_crm_to_funnels.py  0007_generatedmaterial_published_and_more.py  0008_materialshare.py  0009_alter_onboardingform_pipedrive_deal_id.py  0010_onboardingrule_onboardingruleack.py  0011_googleaccountmap_recordingjob.py  0012_schedule_reconcile_recordings.py  0013_remove_time_fields.py  0014_pesquisa_outro_fields.py  0015_reconcile_ondemand.py  0016_generatedmaterial_theme.py
backend/onboarding/pdf/: renderer.py
backend/onboarding/pdf/assets/: styles.css
backend/onboarding/pdf/templates/: _closing_section.html  _crm_section.html  base.html  (+5 more)
(+69 files in other folders)
