[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno[pgvector]>=2.6.4",
    "boto3>=1.42.97",
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.6.2",
    "django-ninja-jwt>=5.4.4",
    "django-q2>=1.9.0",
    "django-storages>=1.14.6",
    "httpx>=0.28.1",
    "openai>=2.33.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.3",
    "python-decouple>=3.8",
    "sqlalchemy>=2.0.49",
    "whitenoise>=6.12.0",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "weasyprint>=68.1",
    "google-api-python-client>=2.150.0",
    "google-auth>=2.35.0",
    "pypdf>=6.13.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]
